2009-09-14  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap_internal.h, csharp/ASAP.ppcs, java/ASAP_ModuleInfo.java:
  replaced character mnemonics with ASAP_TYPE_*

* players/Makefile, csharp/Makefile, gsplayer/Makefile, java/Makefile,
  win32/Makefile: created players/Makefile


2009-09-12  Piotr Fusik  <fox@scene.pl>
* configure.ac, INSTALL, Makefile.in, Makefile, win32/Makefile, xmms/libasap.c,
  xmms/libasap-xmms.c, xmms/libasap.map, xmms/libasap-xmms.map:
  dropped "configure"; added "install-lib";
  XMMS plugin renamed to libasap-xmms.*

* java/Makefile, win32/Makefile: made "make -j 2" work


2009-09-01  Piotr Fusik  <fox@scene.pl>
* CREDITS, Makefile.in, README, asap.c, asap2wav.c, csharp/Makefile,
  csharp/asap2wav.cs, gsplayer/Makefile, java/ASAP2WAV.java, java/Makefile,
  players/cmc.asx, win32/Makefile, win32/apollo/ASAP_Apollo.cpp,
  win32/dshow/asap_dsf.cpp, win32/foobar2000/foo_asap.cpp,
  win32/setup/asap.wxs, win32/wasap/wasap.c, win32/winamp/in_asap.c:
  added CM3 format

* README, win32/Makefile: fixed XHTML, added validation


2009-08-23  Piotr Fusik  <fox@scene.pl>
* README, CREDITS, win32/Makefile: generate web page from project documentation


2009-08-20  Piotr Fusik  <fox@scene.pl>
* asap.c: conversion from CMS to SAP now handles modules which start
  with zeros instead of 0xFFs


2009-08-19  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap2wav.c, Makefile.in, csharp/Makefile, csharp/asap2wav.cs,
  gsplayer/Makefile, gsplayer/gspasap.c, java/Makefile, java/ASAP2WAV.java,
  win32/Makefile, win32/apollo/ASAP_Apollo.cpp, win32/dshow/asap_dsf.cpp,
  win32/foobar2000/foo_asap.cpp, win32/wasap/wasap.c, win32/winamp/in_asap.c,
  win32/setup/asap.wxs, README:
  added Stereo Double CMC (*.cms). Thanks: Ramos, PG, Poison, Raster.

* asap.c: allow modules with two leading zero bytes and not 0xFFs
  (for CMC and clones)


2009-08-12  Piotr Fusik  <fox@scene.pl>
* INSTALL: updated for MinGW


2009-07-30  Piotr Fusik  <fox@scene.pl>