@@ -1,3 +1,8 @@
+2009-09-15  Piotr Fusik  <fox@scene.pl>
+* Makefile: changed variable references from braces to parentheses - to make
+  it consistent with other Makefiles and get highlighting in SciTE
+
+
 2009-09-14  Piotr Fusik  <fox@scene.pl>
 * asap.c, asap.h, asap_internal.h, csharp/ASAP.ppcs, java/ASAP_ModuleInfo.java:
   replaced character mnemonics with ASAP_TYPE_*
